DEVOPS-1826 REFACTOR: debug mode default value

--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -45,7 +45,7 @@ on:
       debug:
         description: "Debug mode"
         type: boolean
-        default: false
+        default: true
 
 permissions:
   deployments: write
