undo debug default

--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -22,7 +22,7 @@ on:
       debug:
         description: "Debug mode"
         type: boolean
-        default: true
+        default: false
 
   workflow_call:
     inputs:
