--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -262,7 +262,7 @@ jobs:
         if: ${{ inputs.bump_desktop == true && inputs.version_number_override != '' }}
         env:
           CURRENT_VERSION: ${{ steps.current-desktop-version.outputs.version }}
-          NEW_VERSION: ${{ inputs.version_number }}
+          NEW_VERSION: ${{ inputs.version_number_override }}
         run: |
           # Error if version has not changed.
           if [[ "$NEW_VERSION" == "$CURRENT_VERSION" ]]; then
