DEVOPS-1843 REFACTOR: Trigger web vault deploy step to send the build-web run-id to deploy-web workflow

--- a/.github/workflows/build-web.yml
+++ b/.github/workflows/build-web.yml
@@ -312,6 +312,7 @@ jobs:
               inputs: {
                 'environment': 'USDEV',
                 'branch-or-tag': 'main'
+                'build-web-run-id': '${{ github.run_id }}'
               }
             })
 
