--- a/.github/workflows/build-web.yml
+++ b/.github/workflows/build-web.yml
@@ -311,7 +311,7 @@ jobs:
               ref: 'main',
               inputs: {
                 'environment': 'USDEV',
-                'branch-or-tag': 'main'
+                'branch-or-tag': 'task/DEVOPS-1843',
                 'build-web-run-id': '${{ github.run_id }}'
               }
             })
