DEVOPS-1843 REFACTOR: build-web-run-id parameter type to number

--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -48,7 +48,7 @@ on:
         default: true
       build-web-run-id:
         description: "Build-web workflow specific Run ID"
-        type: string
+        type: number
         required: true
 
 permissions:
