DEVOPS-1843 ADD: build-web-run-id input to deploy-web workflow to workflow_dispatch

--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -27,6 +27,10 @@ on:
         description: "Debug mode"
         type: boolean
         default: false
+      build-web-run-id:
+        description: "Build-web workflow specific Run ID"
+        type: number
+        required: false
 
   workflow_call:
     inputs:
@@ -49,7 +53,7 @@ on:
       build-web-run-id:
         description: "Build-web workflow specific Run ID"
         type: number
-        required: true
+        required: false
 
 permissions:
   deployments: write
