DEVOPS-1843 FIX: build-web-run-id type in deploy-web.yml

--- a/.github/workflows/build-web.yml
+++ b/.github/workflows/build-web.yml
@@ -312,7 +312,7 @@ jobs:
               inputs: {
                 'environment': 'USDEV',
                 'branch-or-tag': 'task/DEVOPS-1843',
-                'build-web-run-id': ${{ github.run_id }}
+                'build-web-run-id': '${{ github.run_id }}'
               }
             })
 
