--- a/.github/workflows/build-web.yml
+++ b/.github/workflows/build-web.yml
@@ -283,7 +283,7 @@ jobs:
 
   trigger-web-vault-deploy:
     name: Trigger web vault deploy
-    if: github.ref == 'refs/heads/task/DEVOPS-1843'
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-22.04
     needs: build-artifacts
     steps:
