Revert "DEVOPS-1843 TEST: trigger-web-vault-deploy in build-web.yml workflow"
This reverts commit c3354278a5e0f69915c128219bf91818cf476897.

--- a/.github/workflows/build-web.yml
+++ b/.github/workflows/build-web.yml
@@ -308,7 +308,7 @@ jobs:
               owner: 'bitwarden',
               repo: 'clients',
               workflow_id: 'deploy-web.yml',
-              ref: 'task/DEVOPS-1843',
+              ref: 'main',
               inputs: {
                 'environment': 'USDEV',
                 'build-web-run-id': '${{ github.run_id }}'
