--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -178,7 +178,7 @@ jobs:
     steps:
       - name: 'Download latest cloud asset using GitHub Run ID: ${{ inputs.build-web-run-id }}'
         if: ${{ inputs.build-web-run-id }}
-        uses: bitwarden/gh-actions/download-artifacts@main
+        uses: bitwarden/gh-actions/download-artifacts@5b587aa9bb6245e9efe686652183d7b1b014de64
         id: download-latest-artifacts
         continue-on-error: true
         with:
@@ -190,7 +190,7 @@ jobs:
 
       - name: 'Download latest cloud asset from branch/tag: ${{ inputs.branch-or-tag }}'
         if: ${{ !inputs.build-web-run-id }}
-        uses: bitwarden/gh-actions/download-artifacts@main
+        uses: bitwarden/gh-actions/download-artifacts@5b587aa9bb6245e9efe686652183d7b1b014de64
         id: download-artifacts
         continue-on-error: true
         with:
@@ -228,10 +228,10 @@ jobs:
       - name: Set artifact git SHA
         id: set-artifact-name
         run: |
-          if [ -z "${{ steps.download-latest-artifacts.outputs.artifacts }}" ]; then
-            echo "${{ steps.download-artifacts.outputs.artifacts}}" | jq '.[0].head_sha'
+          if [ -z "${{ steps.download-latest-artifacts.outputs.artifact-build-commit }}" ]; then
+            echo "${{ steps.download-artifacts.outputs.artifact-build-commit}}"
           else
-            echo "${{ steps.download-latest-artifacts.outputs.artifacts }}"
+            echo "${{ steps.download-latest-artifacts.outputs.artifact-build-commit }}"
           fi
 
   azure-deploy:
