--- a/apps/browser/tsconfig.json
+++ b/apps/browser/tsconfig.json
@@ -1,8 +1,8 @@
 {
-  "extends": "../../libs/shared/tsconfig",
   "compilerOptions": {
     "moduleResolution": "node",
     "noImplicitAny": true,
+    "allowSyntheticDefaultImports": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "module": "ES2020",
