add activeTab to mv3 permissions

--- a/apps/browser/src/manifest.v3.json
+++ b/apps/browser/src/manifest.v3.json
@@ -51,6 +51,7 @@
     "default_popup": "popup/index.html"
   },
   "permissions": [
+    "activeTab",
     "tabs",
     "contextMenus",
     "storage",
