--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -454,7 +454,7 @@ jobs:
 
       - name: Report upcoming browser release version to Slack
         if: ${{ steps.version-changed.outputs.changes_to_commit == 'TRUE' }} && ${{ steps.set-final-version-output.outputs.version_browser }} != ''
-        uses: bitwarden/gh-actions/report-upcoming-release-version@main
+        uses: bitwarden/gh-actions/report-upcoming-release-version@task/BRE-40
         with:
           version: ${{ steps.set-final-version-output.outputs.version_browser }}
           project: ${{ steps.create-branch.outputs.client }}
@@ -462,7 +462,7 @@ jobs:
 
       - name: Report upcoming cli release version to Slack
         if: ${{ steps.version-changed.outputs.changes_to_commit == 'TRUE' }} && ${{ steps.set-final-version-output.outputs.version_cli }} != ''
-        uses: bitwarden/gh-actions/report-upcoming-release-version@main
+        uses: bitwarden/gh-actions/report-upcoming-release-version@task/BRE-40
         with:
           version: ${{ steps.set-final-version-output.outputs.version_cli }}
           project: ${{ steps.create-branch.outputs.client }}
@@ -470,7 +470,7 @@ jobs:
 
       - name: Report upcoming desktop release version to Slack
         if: ${{ steps.version-changed.outputs.changes_to_commit == 'TRUE' }} && ${{ steps.set-final-version-output.outputs.version_desktop }} != ''
-        uses: bitwarden/gh-actions/report-upcoming-release-version@main
+        uses: bitwarden/gh-actions/report-upcoming-release-version@task/BRE-40
         with:
           version: ${{ steps.set-final-version-output.outputs.version_desktop }}
           project: ${{ steps.create-branch.outputs.client }}
@@ -478,7 +478,7 @@ jobs:
 
       - name: Report upcoming web release version to Slack
         if: ${{ steps.version-changed.outputs.changes_to_commit == 'TRUE' }} && ${{ steps.set-final-version-output.outputs.version_web }} != ''
-        uses: bitwarden/gh-actions/report-upcoming-release-version@main
+        uses: bitwarden/gh-actions/report-upcoming-release-version@task/BRE-40
         with:
           version: ${{ steps.set-final-version-output.outputs.version_web }}
           project: ${{ steps.create-branch.outputs.client }}
