--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -445,12 +445,12 @@ jobs:
           PR_NUMBER: ${{ steps.create-pr.outputs.pr_number }}
         run: gh pr review $PR_NUMBER --approve
 
-      - name: Merge PR
-        if: ${{ steps.version-changed.outputs.changes_to_commit == 'TRUE' }}
-        env:
-          GH_TOKEN: ${{ steps.retrieve-secrets.outputs.github-pat-bitwarden-devops-bot-repo-scope }}
-          PR_NUMBER: ${{ steps.create-pr.outputs.pr_number }}
-        run: gh pr merge $PR_NUMBER --squash --auto --delete-branch
+      #- name: Merge PR
+      #  if: ${{ steps.version-changed.outputs.changes_to_commit == 'TRUE' }}
+      #  env:
+      #    GH_TOKEN: ${{ steps.retrieve-secrets.outputs.github-pat-bitwarden-devops-bot-repo-scope }}
+      #    PR_NUMBER: ${{ steps.create-pr.outputs.pr_number }}
+      #  run: gh pr merge $PR_NUMBER --squash --auto --delete-branch
 
       - name: Report upcoming browser release version to Slack
         if: ${{ steps.version-changed.outputs.changes_to_commit == 'TRUE' }} && ${{ steps.set-final-version-output.outputs.version_browser }} != ''
